--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<img src="bannerhbd.jpg" class="bannar" width="300px">
+				<img src="Snapchat-1041786540.jpg" class="bannar" width="300px" height="350px">
 			</div>
 		</div>
 		<!-- <div class="row message">
